Refactor additional costs section for clarity and layout adjustments

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
           <input type="number" class="form-control" id="rate" value="8500" oninput="calculate()" />
         </div>
       </div>
-      <div class="mb-3">
-        <label class="form-label">Infra charges (BESCOM / BWWB):</label>
-        <input type="number" class="form-control" id="infraCharges" value="250000" oninput="calculate()" />
-      </div>
       <div class="row mb-3">
-        <div class="col-md-6">
-          <label class="form-label">Club House & Amenities:</label>
+        <div class="col-md-4">
+          <label class="form-label">Infra (BESCOM / BWWB):</label>
+          <input type="number" class="form-control" id="infraCharges" value="250000" oninput="calculate()" />
+        </div>
+        <div class="col-md-4">
+          <label class="form-label">Club House:</label>
           <input type="number" class="form-control" id="clubHouse" value="250000" oninput="calculate()" />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <label class="form-label">Parking:</label>
           <input type="number" class="form-control" id="parking" value="300000" oninput="calculate()" />
         </div>
