Add down payment calculation and update results table for clarity

--- a/index.html
+++ b/index.html
@@ -93,16 +93,47 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td>SBA Sq. ft</td><td id="tableSBA"></td></tr>
-        <tr><td>Rate per sq ft</td><td id="tableRate"></td></tr>
-        <tr><td>Basic Cost</td><td id="flatCost"></td></tr>
-        <tr><td>GST (5%)</td><td id="gst"></td></tr>
-        <tr><td><b>Total Cost</b></td><td id="totalCost" class="fw-bold"></td></tr>
-        <tr><td>Maintenance</td><td id="maintenance"></td></tr>
-        <tr><td>Floor Rise Charges</td><td id="floorRiseCharges"></td></tr>
-        <tr><td>Stamp Duty & Registration</td><td id="stampDutyCost"></td></tr>
-        <tr><td><b>Grand Total</b></td><td id="actualCost" class="fw-bold"></td></tr>
-      </tbody>
+        <tr>
+          <td>SBA Sq. ft</td>
+          <td id="tableSBA" class="text-dark"></td>
+        </tr>
+        <tr>
+          <td>Rate per sq ft</td>
+          <td id="tableRate" class="text-dark"></td>
+        </tr>
+        <tr>
+          <td class="text-primary">Basic Cost</td>
+          <td id="flatCost" class="text-primary fw-semibold"></td>
+        </tr>
+        <tr>
+          <td class="text-danger">GST (5%)</td>
+          <td id="gst" class="text-danger"></td>
+        </tr>
+        <tr>
+          <td class="text-primary"><b>Total Cost</b></td>
+          <td id="totalCost" class="fw-bold text-primary"></td>
+        </tr>
+        <tr>
+          <td class="text-secondary">Maintenance</td>
+          <td id="maintenance" class="text-secondary"></td>
+        </tr>
+        <tr>
+          <td class="text-secondary">Floor Rise Charges</td>
+          <td id="floorRiseCharges" class="text-secondary"></td>
+        </tr>
+        <tr>
+          <td class="text-danger">Stamp Duty & Registration</td>
+          <td id="stampDutyCost" class="text-danger"></td>
+        </tr>
+        <tr>
+          <td class="text-success"><b>Grand Total</b></td>
+          <td id="actualCost" class="fw-bold text-success"></td>
+        </tr>
+        <tr>
+          <td class="text-primary"><b>Bank Down Payment</b></td>
+          <td id="downPayment" class="fw-bold text-primary"></td>
+        </tr>
+      </tbody>      
     </table>
   </div>
 
