Add tax benefit estimation calculations and display to results table

--- a/index.html
+++ b/index.html
@@ -164,6 +164,25 @@
           <td class="text-success">Total Payment (Principal + Interest)</td>
           <td id="totalPayment" class="text-success"></td>
         </tr>
+        <tr class="table-secondary">
+          <td colspan="2" class="text-center fw-bold">Tax Benefit Estimation</td>
+        </tr>
+        <tr>
+          <td>Principal Deduction (80C)</td>
+          <td id="taxPrincipal" class="text-primary"></td>
+        </tr>
+        <tr>
+          <td>Interest Deduction (24b)</td>
+          <td id="taxInterest" class="text-danger"></td>
+        </tr>
+        <tr>
+          <td>Annual Tax Saving (Est.)</td>
+          <td id="annualTaxSaving" class="text-success"></td>
+        </tr>
+        <tr>
+          <td>Total Tax Saving (Est. over tenure)</td>
+          <td id="totalTaxSaving" class="text-success fw-bold"></td>
+        </tr>        
       </tbody>      
     </table>
   </div>
