Add loan amortization schedule calculation and display in results

--- a/index.html
+++ b/index.html
@@ -185,6 +185,23 @@
         </tr>        
       </tbody>      
     </table>
+
+    <!-- Loan Amortization Schedule -->
+    <h4 class="mt-5 text-info">Loan Amortization Schedule</h4>
+    <div style="max-height: 400px; overflow-y: auto;">
+      <table class="table table-sm table-striped table-bordered" id="amortizationTable">
+        <thead>
+          <tr>
+            <th>Month</th>
+            <th>Principal</th>
+            <th>Interest</th>
+            <th>Book Balance</th>
+            <th>Yearly Totals (Principal + Interest)</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
   </div>
 
   <script src="./calculator.js" type="text/javascript"></script>
