--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
             <th>Principal</th>
             <th>Interest</th>
             <th>Book Balance</th>
-            <th>Yearly Totals (Principal + Interest)</th>
+            <th>Yearly Totals (Principal / Interest)</th>
+            <th>Surplus Deposit/Withdrawal</th>
           </tr>
         </thead>
         <tbody></tbody>
