Enhance amortization schedule generation to prevent negative interest payments and update table styling for better readability

--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
     </table>
 
     <!-- Loan Amortization Schedule -->
-    <h4 class="mt-5 text-info">Loan Amortization Schedule</h4>
+    <h4 class="text-info">Loan Amortization Schedule</h4>
     <div style="max-height: 400px; overflow-y: auto;">
-      <table class="table table-sm table-striped table-bordered" id="amortizationTable">
-        <thead>
+      <table class="table table-bordered table-striped table-hover" id="amortizationTable">
+        <thead class="table-dark sticky-header">
           <tr>
             <th>Month</th>
             <th>Principal</th>
