Add surplus payment summary section to display loan tenure and savings details

--- a/index.html
+++ b/index.html
@@ -186,6 +186,35 @@
       </tbody>      
     </table>
 
+    <!-- Surplus Payment Summary -->
+    <h4 class="text-success mt-4">Surplus Payment Summary</h4>
+    <div class="card p-3 bg-light border-success mb-4">
+      <div class="row">
+        <div class="col-md-4">
+          <strong>Original Loan Tenure:</strong>
+          <div id="originalTenure">-</div>
+        </div>
+        <div class="col-md-4">
+          <strong>Revised Loan Tenure:</strong>
+          <div id="revisedTenure">-</div>
+        </div>
+        <div class="col-md-4">
+          <strong>Tenure Reduced:</strong>
+          <div id="tenureReduction" class="text-success fw-bold">-</div>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-md-4">
+          <strong>Total Surplus Paid:</strong>
+          <div id="totalSurplusPaid" class="text-primary">-</div>
+        </div>
+        <div class="col-md-4">
+          <strong>Interest Saved:</strong>
+          <div id="interestSaved" class="text-danger fw-bold">-</div>
+        </div>
+      </div>
+    </div>
+
     <!-- Loan Amortization Schedule -->
     <h4 class="text-info">Loan Amortization Schedule</h4>
     <div style="max-height: 400px; overflow-y: auto;">
